--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     ]
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@contentful/rich-text-types": "^13.4.0",
     "@reach/dialog": "^0.2.0",
     "@reach/router": "^1.2.1",
     "@reach/visually-hidden": "^0.1.1",
     "babel-plugin-styled-components": "^1.10.0",
     "disqus-react": "^1.0.8",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.3.26",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-offline": "^2.0.25",
@@ -40,12 +39,9 @@
     "gatsby-plugin-snipcartv3": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-webpack-size": "^0.0.3",
-    "gatsby-remark-custom-image-component": "^1.0.1",
-    "gatsby-source-atom": "^0.2.0",
     "gatsby-source-contentful": "^2.1.19",
     "gatsby-source-filesystem": "^2.0.30",
     "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-react-docgen": "^5.0.19",
     "gatsby-transformer-remark": "^2.3.9",
     "gatsby-transformer-sharp": "^2.1.18",
     "intersection-observer": "^0.5.1",
@@ -61,6 +57,8 @@
   "devDependencies": {
     "ava": "^2.2.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.8",
     "chrome-launcher": "^0.13.2",
     "core-js": "^2.6.2",
     "directory-named-webpack-plugin": "^4.0.0",
@@ -73,10 +71,12 @@
     "eslint-plugin-react": "^7.12.4",
     "favicons": "^5.3.0",
     "gatsby-plugin-eslint": "^2.0.3",
-    "gatsby-plugin-mdx": "^1.0.46",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "lighthouse": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-gyp": "^3.8.0",
-    "prettier": "^1.16.0"
+    "prettier": "^1.16.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
