--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "build:dir": "mkdirp ./public/icons/",
     "build:favicons": "node scripts/favicons",
     "build": "npm run build:dir && npm run build:favicons && gatsby build",
-    "test": "ava **/*.test.js --verbose",
+    "build:local": "gatsby build",
+    "test": "jest",
     "eslint-fix": "eslint --fix src/**/*.js"
   },
   "greenkeeper": {
     "ignore": [
-      "ava",
       "core-js"
     ]
   },
@@ -55,11 +55,11 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "ava": "^2.2.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.6",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.0.1",
     "babel-preset-gatsby": "^0.4.8",
-    "chrome-launcher": "^0.13.2",
     "core-js": "^2.6.2",
     "directory-named-webpack-plugin": "^4.0.0",
     "eslint": "^5.12.1",
@@ -71,12 +71,20 @@
     "eslint-plugin-react": "^7.12.4",
     "favicons": "^5.3.0",
     "gatsby-plugin-eslint": "^2.0.3",
+    "gatsby-plugin-module-resolver": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
-    "lighthouse": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-gyp": "^3.8.0",
     "prettier": "^1.16.0",
     "react-test-renderer": "^16.13.1"
+  },
+  "jest": {
+    "verbose": true
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/koalamango/keki.git"
   }
 }
