--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "disqus-react": "^1.0.8",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.3.26",
+    "gatsby": "2.25.0",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -39,7 +39,7 @@
     "gatsby-plugin-snipcartv3": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-webpack-size": "^0.0.3",
-    "gatsby-source-contentful": "^2.1.19",
+    "gatsby-source-contentful": "^4.2.0",
     "gatsby-source-filesystem": "^2.0.30",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.9",
