--- a/package.json
+++ b/package.json
@@ -2,89 +2,41 @@
   "name": "keki",
   "description": "Kēki Artisan Cakes: gatsby+contentful+snipcart starter",
   "author": "Jessie Wang",
-  "version": "0.0.1",
-  "scripts": {
-    "develop": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "ssr": "npm run build && npm run serve",
-    "format": "prettier --config ./.prettierrc --write src/**/*.js",
-    "format-css": "prettier --config ./.prettierrc --write src/**/*.css.js",
-    "build:dir": "mkdirp ./public/icons/",
-    "build:favicons": "node scripts/favicons",
-    "build": "npm run build:dir && npm run build:favicons && gatsby build",
-    "build:local": "gatsby build",
-    "test": "jest",
-    "eslint-fix": "eslint --fix src/**/*.js"
+  "version": "0.1.0",
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "greenkeeper": {
-    "ignore": [
-      "core-js"
-    ]
+  "scripts": {
+    "start": "gatsby develop",
+    "dev": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "dependencies": {
-    "@reach/dialog": "^0.2.0",
-    "@reach/router": "^1.2.1",
-    "@reach/visually-hidden": "^0.1.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "disqus-react": "^1.0.8",
-    "dotenv": "^8.2.0",
-    "gatsby": "2.25.0",
-    "gatsby-image": "^2.0.39",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-sitemap": "^2.0.12",
-    "gatsby-plugin-snipcartv3": "^2.2.1",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-webpack-size": "^0.0.3",
-    "gatsby-source-contentful": "^4.2.0",
-    "gatsby-source-filesystem": "^2.0.30",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-remark": "^2.3.9",
-    "gatsby-transformer-sharp": "^2.1.18",
-    "intersection-observer": "^0.5.1",
-    "prism-react-renderer": "^0.1.7",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-pose": "^4.0.5",
-    "react-star-rating-component": "^1.4.1",
-    "styled-components": "^4.1.3"
+    "@contentful/rich-text-html-renderer": "^15.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "disqus-react": "^1.1.5",
+    "framer-motion": "^8.4.2",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-sharp": "^5.4.0",
+    "gatsby-plugin-snipcartv3": "^2.3.3",
+    "gatsby-plugin-styled-components": "^6.4.0",
+    "gatsby-source-contentful": "^8.4.1",
+    "gatsby-source-filesystem": "^5.4.0",
+    "gatsby-transformer-sharp": "^5.4.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "sharp": "^0.30.5",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.6",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^26.0.1",
-    "babel-preset-gatsby": "^0.4.8",
-    "core-js": "^2.6.2",
-    "directory-named-webpack-plugin": "^4.0.0",
-    "eslint": "^5.12.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "favicons": "^5.3.0",
-    "gatsby-plugin-eslint": "^2.0.3",
-    "gatsby-plugin-module-resolver": "^1.0.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
-    "mkdirp": "^0.5.1",
-    "node-gyp": "^3.8.0",
-    "prettier": "^1.16.0",
-    "react-test-renderer": "^16.13.1"
-  },
-  "jest": {
-    "verbose": true
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/koalamango/keki.git"
+    "prettier": "2.5.1"
   }
 }
